# detraffic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: github-pages.yml  main.yml
detraffic/: __init__.py  agent.py  benchmark.py  experiment.py  game.py  kan.py  model_builder.py  utils.py
experiments/: dqn.yaml  inzva.yaml  kaqn.yaml  test.yaml
experiments/common/: dqn_models.yaml  envs.yaml  hyperparams.yaml  iters.yaml  kaqn_models.yaml
models/dqn/: dqn-b.yaml  dqn-s.yaml
models/kaqn/: kaqn-b.yaml  kaqn-s.yaml
tests/: test_detraffic.py
