[tool.poetry]
name = "detraffic"
version = "0.1.0"
description = ""
authors = ["Melih DARCAN <57872471+MelihDarcanxyz@users.noreply.github.com>"]
license = "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"

[tool.poetry.dependencies]
python = "^3.10"
sumo-rl = "^1.4.3"
pettingzoo = "^1.24.3"

[tool.poetry.dev-dependencies]
pdoc = "^14.4.0"
pytest = "^8.1.0"
shed = "^2024.1.1"
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
